# plasma-analyzer

./: CMakeLists.txt  README.md
applet/: CMakeLists.txt  Messages.sh  metadata.desktop
applet/contents/config/: config.qml  main.xml
applet/contents/ui/: ConfigGeneral.qml  SpectrumModel.qml  fft.js  main.qml
src/: CMakeLists.txt  StreamReader.cpp  StreamReader.h  main.cpp  resources.qrc
src/libqml/: plugin.cpp  plugin.h  qmldir
src/qml/: main.qml  ui
